--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -18,6 +18,7 @@
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "axios": "^1.2.0",
     "classnames": "^2.3.2",
+    "dompurify": "^3.0.0",
     "dotenv": "^16.0.2",
     "emoji-mart": "^5.5.2",
     "eslint-config-prettier": "^8.5.0",
@@ -34,6 +35,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
+    "@types/dompurify": "^2.4.0",
     "@types/jest": "^28.1.8",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
