--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -17,12 +17,15 @@
     "dotenv": "^16.0.2",
     "eslint-config-prettier": "^8.5.0",
     "express": "^4.18.1",
+    "express-validator": "^6.15.0",
+    "helmet": "^6.0.1",
     "pg": "^8.8.0",
     "prettier": "^2.7.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "sequelize": "^6.28.0",
-    "sequelize-typescript": "^2.1.5"
+    "sequelize-typescript": "^2.1.5",
+    "serialize-javascript": "^6.0.1"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.3",
@@ -30,6 +33,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^28.1.8",
     "@types/pg": "^8.6.5",
+    "@types/serialize-javascript": "^5.0.2",
     "@typescript-eslint/eslint-plugin": "^5.35.1",
     "@typescript-eslint/parser": "^5.35.1",
     "babel-jest": "^29.0.1",
